syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ContentDataProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Data Object
message DataResourceFlatData {
    option (routines.entity_type) = "DataResource";
    option (routines.keys).keys = "data_resource_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dataResourceId
    string data_resource_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string data_resource_type_id = 2 [(routines.opts).field_type = "id"];
    string data_template_type_id = 3 [(routines.opts).field_type = "id"];
    string data_category_id = 4 [(routines.opts).field_type = "id"];
    string data_source_id = 5 [(routines.opts).field_type = "id"];
    string status_id = 6 [(routines.opts).field_type = "id"];
    string data_resource_name = 7 [(routines.opts).field_type = "value"];
    string locale_string = 8 [(routines.opts).field_type = "very-short"];
    string mime_type_id = 9 [(routines.opts).field_type = "id-vlong"];
    string character_set_id = 10 [(routines.opts).field_type = "id-long"];
    string object_info = 11 [(routines.opts).field_type = "long-varchar"];
    string survey_id = 12 [(routines.opts).field_type = "id"];
    string survey_response_id = 13 [(routines.opts).field_type = "id"];
    string related_detail_id = 14 [(routines.opts).field_type = "id"];
    routines.Indicator is_public = 15 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp created_date = 16 [(routines.opts).field_type = "date-time"];
    string created_by_user_login = 17 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_modified_date = 18 [(routines.opts).field_type = "date-time"];
    string last_modified_by_user_login = 19 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 20 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 21 [(routines.opts).field_type = "date-time"];
    string tenant_id = 22 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 50;
    map<string, google.protobuf.Any> attachments = 51 ;
}

message DataResourceKey{
    string data_resource_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message DataResourceList{
    repeated DataResourceFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListDataResources` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// flat-ent: Electronic Text
message ElectronicTextFlatData {
    option (routines.entity_type) = "ElectronicText";
    option (routines.keys).keys = "data_resource_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dataResourceId
    string data_resource_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string text_data = 2 [(routines.opts).field_type = "very-long"];
    google.protobuf.Timestamp last_updated_tx_stamp = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    string tenant_id = 5 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 8;
    map<string, google.protobuf.Any> attachments = 9 ;
}

message ElectronicTextKey{
    string data_resource_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ElectronicTextList{
    repeated ElectronicTextFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListElectronicTexts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

