syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ContentDataExtraProto";
option objc_class_prefix = "ContentDataExtra";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";

// Audio Data Object
message AudioDataResourceData {
    option (routines.entity_type) = "AudioDataResource";
    option (routines.keys).keys = "data_resource_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dataResourceId
    // fields
        
    string data_resource_id = 1 [json_name = "data_resource_id"];    
    bytes audio_data = 2 [json_name = "audio_data"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 3 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 4 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 6;
    map<string, google.protobuf.Any> attachments = 7;
}


message AudioDataResourceList{
    repeated AudioDataResourceData values=1;
}


// Data Object Attribute
message DataResourceAttributeData {
    option (routines.entity_type) = "DataResourceAttribute";
    option (routines.keys).keys = "data_resource_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dataResourceId, attrName
    // fields
        
    string data_resource_id = 1 [json_name = "data_resource_id"];    
    string attr_name = 2 [json_name = "attr_name"];    
    string attr_value = 3 [json_name = "attr_value"];    
    string attr_description = 4 [json_name = "attr_description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];    
    string id = 7 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message DataResourceAttributeList{
    repeated DataResourceAttributeData values=1;
}


// Data Resource Meta-Data Predicate
message DataResourceMetaDataData {
    option (routines.entity_type) = "DataResourceMetaData";
    option (routines.keys).keys = "data_resource_id, meta_data_predicate_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dataResourceId, metaDataPredicateId
    // fields
        
    string data_resource_id = 1 [json_name = "data_resource_id"];
    string meta_data_predicate_id = 2 [json_name = "meta_data_predicate_id"]; // MetaDataPredicate    
    string meta_data_value = 3 [json_name = "meta_data_value"];
    string data_source_id = 4 [json_name = "data_source_id"]; // DataSource    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];    
    string id = 7 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message DataResourceMetaDataList{
    repeated DataResourceMetaDataData values=1;
}


// Data Object Purpose
message DataResourcePurposeData {
    option (routines.entity_type) = "DataResourcePurpose";
    option (routines.keys).keys = "data_resource_id, content_purpose_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dataResourceId, contentPurposeTypeId
    // fields
        
    string data_resource_id = 1 [json_name = "data_resource_id"];
    string content_purpose_type_id = 2 [json_name = "content_purpose_type_id"]; // ContentPurposeType    
    google.protobuf.Timestamp last_updated_tx_stamp = 3 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 4 [json_name = "created_tx_stamp"];    
    string id = 5 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 7;
    map<string, google.protobuf.Any> attachments = 8;
}


message DataResourcePurposeList{
    repeated DataResourcePurposeData values=1;
}


// DataResource Role
message DataResourceRoleData {
    option (routines.entity_type) = "DataResourceRole";
    option (routines.keys).keys = "data_resource_id, party_id, role_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dataResourceId, partyId, roleTypeId, fromDate
    // fields
        
    string data_resource_id = 1 [json_name = "data_resource_id"];    
    string party_id = 2 [json_name = "party_id"];    
    string role_type_id = 3 [json_name = "role_type_id"];    
    google.protobuf.Timestamp from_date = 4 [json_name = "from_date"];    
    google.protobuf.Timestamp thru_date = 5 [json_name = "thru_date"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 7 [json_name = "created_tx_stamp"];    
    string id = 8 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 12;
    map<string, google.protobuf.Any> attachments = 13;
}


message DataResourceRoleList{
    repeated DataResourceRoleData values=1;
}


// Data Object Type Attribute
message DataResourceTypeAttrData {
    option (routines.entity_type) = "DataResourceTypeAttr";
    option (routines.keys).keys = "data_resource_type_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dataResourceTypeId, attrName
    // fields
        
    string data_resource_type_id = 1 [json_name = "data_resource_type_id"];    
    string attr_name = 2 [json_name = "attr_name"];    
    string description = 3 [json_name = "description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];    
    string id = 6 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 8;
    map<string, google.protobuf.Any> attachments = 9;
}


message DataResourceTypeAttrList{
    repeated DataResourceTypeAttrData values=1;
}


// Image Data Object
message ImageDataResourceData {
    option (routines.entity_type) = "ImageDataResource";
    option (routines.keys).keys = "data_resource_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dataResourceId
    // fields
        
    string data_resource_id = 1 [json_name = "data_resource_id"];    
    bytes image_data = 2 [json_name = "image_data"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 3 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 4 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 6;
    map<string, google.protobuf.Any> attachments = 7;
}


message ImageDataResourceList{
    repeated ImageDataResourceData values=1;
}


// Other Data Object
message OtherDataResourceData {
    option (routines.entity_type) = "OtherDataResource";
    option (routines.keys).keys = "data_resource_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dataResourceId
    // fields
        
    string data_resource_id = 1 [json_name = "data_resource_id"];    
    bytes data_resource_content = 2 [json_name = "data_resource_content"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 3 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 4 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 6;
    map<string, google.protobuf.Any> attachments = 7;
}


message OtherDataResourceList{
    repeated OtherDataResourceData values=1;
}


// Video Data Object
message VideoDataResourceData {
    option (routines.entity_type) = "VideoDataResource";
    option (routines.keys).keys = "data_resource_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: dataResourceId
    // fields
        
    string data_resource_id = 1 [json_name = "data_resource_id"];    
    bytes video_data = 2 [json_name = "video_data"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 3 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 4 [json_name = "created_tx_stamp"];
        

    // extra
    google.protobuf.Struct extra = 6;
    map<string, google.protobuf.Any> attachments = 7;
}


message VideoDataResourceList{
    repeated VideoDataResourceData values=1;
}


